--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-            <img src="../images/logo.jpg" alt="EzonLife Logo" class="logo-image">
+            <img src="../images/logo.jpg"class="logo-image">
+                <span class="logo-text">EZonLife</span>
+             </a>
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#mission" class="nav-link">Mission</a></li>
@@ -205,4 +207,5 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
 
