--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-            <img src="../images/logo.jpg"class="logo-image">
+            <img src="/images/logo.jpg"class="logo-image">
                 <span class="logo-text">EZonLife</span>
              </a>
             </div>
@@ -207,5 +207,6 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
 
 
