--- a/products/sauerkraut.html
+++ b/products/sauerkraut.html
@@ -297,7 +297,7 @@
                 <div class="packaging-display">
                     <div class="packaging-option" style="border-color: var(--lighter-olive);">
                         <div class="packaging-image">
-                            <img src="../images/Sauerkraut-250g.jpg" alt="EzonLife Sauerkraut 250g">
+                            <img src="../images/sauerkraut-250g.jpg" alt="EzonLife Sauerkraut 250g">
                         </div>
                         <div class="packaging-info">
                             <h4 style="color: var(--primary-olive);">250g Jar</h4>
@@ -403,4 +403,5 @@
 
     <script src="../scripts/script.js"></script>
 </body>
+
 </html>
