--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
             </div>
         </div>
     </section>
-
         <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="../images/logo.jpg" alt="EzonLife Logo" class="footer-logo">
+                    <!-- Fixed footer logo path too -->
+                    <img src="images/logo.jpg" alt="EzonLife Logo" class="footer-logo">
                     <h3>EzonLife</h3>
                     <p>Natural Wellness for Every Home</p>
                 </div>
                 <div class="footer-links">
-                    <a href="../index.html#mission">Our Mission</a>
-                    <a href="../index.html#products">Products</a>
-                    <a href="../index.html#benefits">Benefits</a>   
+                    <a href="#mission">Our Mission</a>
+                    <a href="#products">Products</a>
+                    <a href="#benefits">Benefits</a>   
                 </div>
             </div>
             <!-- Social Media Links -->
@@ -207,6 +207,7 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
 
 
 
