--- a/products/sauerkraut.html
+++ b/products/sauerkraut.html
@@ -264,7 +264,7 @@
                 
                 <div class="video-container">
                     <iframe 
-                        src="https://drive.google.com/file/d/1l12WMfFW7gNkHN2A6r3yRX8poOtkEqOi/preview" 
+                        src="https://www.facebook.com/share/1CgqkZ54mz/preview" 
                         width="100%" 
                         height="500"
                         frameborder="0" 
@@ -405,3 +405,4 @@
 </body>
 
 </html>
+
