--- a/products/sauerkraut.html
+++ b/products/sauerkraut.html
@@ -264,7 +264,7 @@
                 
                 <div class="video-container">
                     <iframe 
-                        src="https://drive.google.com/file/d/1DsouJlUttPKiTHwbTsVYd2SiswyBEvSO/view?usp=drive_link/preview" 
+                        src="https://drive.google.com/file/d/1DsouJlUttPKiTHwbTsVYd2SiswyBEvSO/preview" 
                         width="100%" 
                         height="500"
                         frameborder="0" 
@@ -405,5 +405,6 @@
 </body>
 
 </html>
+
 
 
